--- a/src/css/SignInputBox.css
+++ b/src/css/SignInputBox.css
@@ -1,10 +1,9 @@
 
 .SignInputBox {
 
-    width: 300px;
+    width: 100%;
     height: 50px;
-
-    background-color: beige;
+    margin: 15px 0px;
 
 }
 
@@ -12,9 +11,29 @@
 .SignInputBox {
     display: flex;
     flex-direction: row;
+    border: 1px solid #E2E8F0;
+    border-radius: 10px;
+
+    box-sizing: border-box;
+    padding: 10px;
+    
+}
+
+.InputBoxIcon {
+    flex : 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #64748B;
 }
 
 .SignInputBox > input {
-
+    flex: 8;
     border: 0;
+    outline: none;
+    color: #64748B;
+}
+
+.InputEndIcon {
+    flex: 1;
 }
