--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -18,6 +18,11 @@
 }
 
 .ViewBox {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     padding: 20px;
 }
