--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -61,3 +61,33 @@
     margin-left: 45px;
     margin-right: 15px;
 }
+
+.DropdownMenu {
+    position: absolute;
+    top: 55px; /* Header의 높이만큼 아래로 이동 */
+    right: 20px; /* UserBox와 정렬 */
+    background-color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 10;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+.DropdownItem {
+    padding: 10px 15px;
+    font-size: 14px;
+    color: black;
+    cursor: pointer;
+    text-align: center;
+    border-bottom: 1px solid #ebebeb;
+}
+
+.DropdownItem:last-child {
+    border-bottom: none;
+}
+
+.DropdownItem:hover {
+    background-color: #f5f5f5;
+}
